--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon src/index.js localhost 8080",
-    "xz": ""
+    "xzz": ""
   },
   "dependencies": {},
   "devDependencies": {
